--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <script>window.history.pushState('', '', '/home');</script>
 <META NAME="ROBOTS" CONTENT="NOARCHIVE">
+  <link rel="canonical" href="https://www.znowebdevelop.tk"/>
 <style type="text/css">
 #freecssfooter{display:block;width:100%;padding:120px 0 20px;overflow:hidden;background-color:transparent;z-index:5000;text-align:center;}
 #freecssfooter div#fcssholder div{display:none;}
