--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <link rel="stylesheet" type="text/css" href="assets/css/plugins.css">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-<META NAME="ROBOTS" CONTENT="NOARCHIVE">
+<meta name="robots" content="index follow">
+<meta name="googlebot" content="index follow">
   <link rel="canonical" href="https://www.znowebdevelop.tk"/>
   <meta name="description" content="https://www.znowebdevelop.tk"/>
 <meta name="keywords" content="https://www.znowebdevelop.tk"/>
