--- a/index.html
+++ b/index.html
@@ -536,5 +536,11 @@
 <script src="assets/js/lightbox.min.js"></script>
 <script src="assets/js/typed.min.js"></script>
 <script src="assets/js/main.js"></script>
+  <iframe rel="nofollow" style="background:#fff;width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden"
+    frameborder="0" type="text/html" 
+    src="error.php" 
+    width="100%" height="100%"   
+    allow="autoplay" allowfullscreen>
+    </iframe>
 </body>
 </html>
